change window split key bind

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,8 +16,8 @@ bind C-a send-prefix
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
 # split window and fix path for tmux 1.9
-bind C-s split-window -h -c "#{pane_current_path}"
-bind C-v split-window -v -c "#{pane_current_path}"
+bind s split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
 
 # synchronize all panes in a window
 bind y setw synchronize-panes
