change to onedark colorscheme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,3 +53,6 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
+set-option -sg escape-time 10
+set-option -ga terminal-overrides ",xterm-256color:Tc"
